# Visua

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
assets/: Icon_projet.afphoto  icon.icns  make_icns.sh
assets/windows/: app.rc
src/: main.rs
