[build-dependencies]
embed-resource = "2.5"
winres = "0.1"

[package]
build = "build.rs"
name = "visua"
version = "1.3.1"
authors = ["AdrienLor"]
edition = "2024"

[dependencies]
eframe = { version = "0.29", features = ["wgpu"] }
egui   = "0.29"
image  = { version = "0.25", default-features = false, features = ["png","jpeg","gif","ico","bmp","tga","pnm","hdr","webp","tiff"] }
tiff   = "0.9"
rfd    = "0.14"
bytemuck = { version = "1.15", features = ["derive"] }
num_cpus = "1.16"

[package.metadata.bundle]
identifier = "com.tonorg.visua"
name = "Visua"
icon = ["assets/icon.icns"]         # optionnel si tu as une icône
copyright = "© 2025 Adrien"
short_description = "Fast, clear image viewer"

category = "public.app-category.photography"
